package com.backend.design.pattern.designs.TIcTacToe.model;

/**
 * Enum representing the state of the game
 */
public enum GameState {
    NOT_STARTED,
    IN_PROGRESS,
    PLAYER_WON,
    DRAW,
    ABORTED
}

